menu open/close, updated background, flip on player direction
all draggable items are prefabs with the draggableItemScript -> this script is supposed to set each item to active if it has been found.  This part in PlayerCharacter.cs is meant to set it: `GameObject.Find(myTarget).GetComponent<draggableItemScript>().hasBeenFound = true;`

--- a/GGJ19/New Unity Project/Assembly-CSharp.csproj
+++ b/GGJ19/New Unity Project/Assembly-CSharp.csproj
@@ -53,6 +53,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\draggableItemScript.cs" />
+     <Compile Include="Assets\foundItems.cs" />
      <Compile Include="Assets\NewBehaviourScript.cs" />
      <Compile Include="Assets\YarnSpinner\Code\DialogueRunner.cs" />
      <Compile Include="Assets\YarnSpinner\Examples\DemoScripts\CameraFollow.cs" />
